--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -8,7 +8,7 @@
   margin-right: 10px;
 }
 .head label {
-  margin-right: 30px;
+  margin-right: 60px;
   font-size: 13px;
 }
 /*------head-----------*/
@@ -17,11 +17,11 @@
   padding: 20px 0;
 }
 .search .logo img {
-  width: auto;
+  width: 300px;
   height: auto;
 }
 .search .width {
-  width: 20%;
+  width: 30%;
 }
 .search-box {
   width: 80%;
@@ -113,7 +113,7 @@ header ul li a:hover {
 .search.active {
   height: 12vh;
   position: fixed;
-  top: 0;
+  top: -30px;
   z-index: 1000;
   width: 100%;
   background-color: #fff;
