--- a/src/common/header/Navbar.css
+++ b/src/common/header/Navbar.css
@@ -3,17 +3,18 @@
     padding-left: 10%;
   }
   .category {
+    /* font-size: 1vw;   */
+
     position: absolute;
     z-index: 1;
-    /* display: none; */
     box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
     background-color: #575757;
-    width: 15%;
-    height: 52%;
+    width: 180px;
+    height: 570px;
     padding: 2px 0 0 0px;
     border-radius: 5px;
     margin-top: 5px;
-    margin-left: 20px;
+    margin-left: 80px;
     animation: slideDown 0.3s ease forwards;
   }
   @keyframes slideDown {
@@ -64,7 +65,9 @@
   }
   .mtop {
     margin-top: 40px;
+    overflow: hidden;
   }
+  .mtop 
   .heading i {
     color: #e94560;
     margin: 10px;
@@ -79,5 +82,17 @@
     border-radius: 50px;
     color: #fff;
     margin: 10px;
+    overflow: hidden
   }
-  
+  @media  (max-width: 768px)  {
+
+    .search-box.f-flex{
+      font-size: 10%;
+    }
+    .mtop img{
+      width: 100px;
+    }
+    .category{
+      
+    }
+  }
